--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             // Appelle le runtime
             // Premier parametre : le nom de l'element Canvas
             // Second parametre : chemin vers le fichier CCH. Les sons et les images doivent se trouver a cote
-            new Runtime("MMFCanvas", "system/Unixel Web.cch");
+            new Runtime("MMFCanvas", "system/Unixel.cch");
         }
         // RUNTIMESTARTEND
     </script>
